# smash-board

./: Cargo.toml  README.md  justfile
config/: Cargo.toml
config/src/: lib.rs
core/: Cargo.toml
core/src/: db.rs  grammar.rs  hook.rs  lib.rs
hooks/: Cargo.toml
hooks/src/: lib.rs  wayland.rs
lib/: Cargo.toml
lib/src/: cli.rs  config.rs  grammar.rs  lib.rs
src/: cli.rs  composer.rs  config.rs  db.rs  hook.rs  lib.rs  main.rs
tui/: Cargo.toml  justfile
tui/src/: inline.rs  interactive.rs  lib.rs
