[package]
name = "smash_board"
version = "0.1.0"
edition = "2021"
description = "A yet CLI clipboard manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["tui", "core"]
default-members = ["core"]

[features]
default = ["wayland"]
tui = ["tui/interactive"]
read-config = ["core"]
wayland = ["core"]
x11 = ["core"]

[dependencies]
tui = { path = "tui", features = ["interactive"] }
core = {path = "core", features = ["wayland", "x11", "read-config"], optional = true}

[workspace.dependencies]
crossterm = "0.27" 
ratatui = "0.26" 
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rusqlite = "0.30"
clap = { version = "4.5.4", features = ["derive"]}
wl-clipboard-rs = "0.8"
