[package]
name = "core"
version = "0.2.0"
edition = "2021"

[features]
default = ["config/base", "tui/inline", "hooks/wayland"]
interactive = ["dep:tui", "tui/interactive"]
read-config = ["config/read-config"]

[dependencies]
hooks = { path = "../hooks", features = ["wayland", "x11"] }
tui = { path = "../tui", features =[ "interactive", "inline" ], optional = true }
config = { path = "../config", features = [ "read-config", "base" ] }
clap = { workspace = true }
rusqlite = { workspace = true }
