[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[feature]
read-config = ["dep:lib/read-config"]

[dependencies]

clap = {workspace = true, feature = ["derive"]}
rusqlite = {workspace = true}
serde = {workspace = true, feature = ["derive"], optional = true}
toml = {workspace = true, optional = true}
